; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_sgi_hotplug.c_get_power_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_sgi_hotplug.c_get_power_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hotplug_slot = type { %struct.slot* }
%struct.slot = type { i32, i32 }
%struct.pcibus_info = type { i32 }

@sn_hotplug_mutex = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hotplug_slot*, i32*)* @get_power_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_power_status(%struct.hotplug_slot* %0, i32* %1) #0 {
  %3 = alloca %struct.hotplug_slot*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.slot*, align 8
  %6 = alloca %struct.pcibus_info*, align 8
  %7 = alloca i32, align 4
  store %struct.hotplug_slot* %0, %struct.hotplug_slot** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.hotplug_slot*, %struct.hotplug_slot** %3, align 8
  %9 = getelementptr inbounds %struct.hotplug_slot, %struct.hotplug_slot* %8, i32 0, i32 0
  %10 = load %struct.slot*, %struct.slot** %9, align 8
  store %struct.slot* %10, %struct.slot** %5, align 8
  %11 = load %struct.slot*, %struct.slot** %5, align 8
  %12 = getelementptr inbounds %struct.slot, %struct.slot* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.pcibus_info* @SN_PCIBUS_BUSSOFT_INFO(i32 %13)
  store %struct.pcibus_info* %14, %struct.pcibus_info** %6, align 8
  %15 = call i32 @mutex_lock(i32* @sn_hotplug_mutex)
  %16 = load %struct.pcibus_info*, %struct.pcibus_info** %6, align 8
  %17 = getelementptr inbounds %struct.pcibus_info, %struct.pcibus_info* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.slot*, %struct.slot** %5, align 8
  %20 = getelementptr inbounds %struct.slot, %struct.slot* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = shl i32 1, %21
  %23 = and i32 %18, %22
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  %26 = zext i1 %25 to i64
  %27 = select i1 %25, i32 1, i32 0
  %28 = load i32*, i32** %4, align 8
  store i32 %27, i32* %28, align 4
  %29 = call i32 @mutex_unlock(i32* @sn_hotplug_mutex)
  ret i32 0
}

declare dso_local %struct.pcibus_info* @SN_PCIBUS_BUSSOFT_INFO(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
